# be-uiren-ai

./: pyproject.toml
migrations/: env.py
migrations/versions/: 1eee104f62ef_do_localization_in_study_word.py  2b69d882cf98_remove_some_fields.py  2e9e473474e3_create_new_table_training.py  86b52821170f_add_accuracy_field_in_user_answer.py  a6a5f1cbaec9_replaces_question_id_to_edge_id.py  afea6ff482c5_add_new_field_level.py  df1074961f5f_init_tables.py  e9bef48957cd_add_new_description_field_in_edge.py  f90fe4b92655_add_check_cons_to_profile_tabl.py
src/api/: depends.py
src/api/routers/: answers.py  profiles.py  roadmaps.py  trainings.py  users.py
src/api/schemas/: profiles.py  questions.py  responses.py  roadmaps.py  trainings.py  users.py
src/app/: config.py  constants.py  database.py  main.py  uow.py
src/models/: profiles.py  questions.py  roadmap_edges.py  study_words.py  trainings.py  user_answers.py  users.py
src/repositories/: __init__.py  base.py  profile_repository.py  question_repository.py  roadmap_edges_repository.py  study_word_repository.py  training_repository.py  user_answer_repository.py  user_repository.py
src/services/: jwt_service.py  openai_service.py  password_service.py
